# CI-Steering

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
src/: __init__.py  ci_decomposition.py  ci_steering_evaluation.py  confaide_ci_steering.py  confaide_evaluation.py  extract_activations.py  generate_stimuli.py  lorra_finetune.py  privaci_ci_steering.py  privaci_evaluation.py  read_representations.py  rep_tuning.py  steer_and_evaluate.py  utility_evaluation.py
src/control/: __init__.py  ci_steering.py  contrast_steering.py  lorra.py  rep_tuning.py  steering.py
src/data/: __init__.py  confaide_loader.py  stimulus_generation.py
src/evaluation/: __init__.py  ci_eval.py
src/extraction/: __init__.py  activation_extractor.py
src/reading/: __init__.py  pca_reader.py  probe_reader.py
src/utils/: __init__.py  model_utils.py
